# effective-eureka

./: .gitignore  MLM_scoring.ipynb  MLM_scoring_CLI.ipynb  NKJP_ngrams.ipynb  Poleval_stuff.ipynb  bib.bib  expand-lexical.pl  extract_differences.ipynb
data/: freq-intrusions.pron.tsv  processed-pairs.tsv
fstprintstrings/: Makefile  Makefile.am  autogen.sh  configure.ac  fstprintstrings.cc  fstprintstrings.h
notebooks/: freq-misses.txt  pairs.tsv  run_bert_tokeniser_on_lattices.ipynb  tokenised.tsv
scripts/: checker.pl  clean-nkjp.pl  download-gonito-data.sh  download-poleval-data.sh  expand-lexical.pl  get_model_syms.sh  make-inserts-fst.pl  make-unknown-mapper.pl  merge-counts.pl  mk-hyp-json.pl  mlm_setup.sh  proc-extracted-pairs.pl  run-tokeniser.py  score_sentence.py  unzip-files.sh
thrax/batch_tester/: Makefile.am  batch_tester.cc
thrax/data/: Makefile  alphabet.grm  card-1-9-f-nom.tsv  card-1-9-m-gen.tsv  card-1-9-m-ins.tsv  card-1-9-m-nom-roman.tsv  card-1-9-m-nom.tsv  card-1-9-n-nom.tsv  card-10-90-gen.tsv  card-10-90-ins.tsv  card-10-90-nom.tsv  card-100-900-gen.tsv  card-100-900-ins.tsv  card-100-900-nom-nozero.tsv  card-100-900-nom.tsv  card-1000-9000-nom-nozero.tsv  card-1000-9000-nom.tsv  card-11-19-gen.tsv  card-11-19-ins.tsv  card-11-19-nom.tsv  card-20-90-nozero.tsv  cardinals.grm  cardinals_base.grm  dziennik.grm  dzienniki-nom.tsv  hybrids_ord_1-9-f_gld.tsv  hybrids_ord_1-9-mn_gen.tsv  hybrydy_1-9.tsv  hybrydy_10-90.tsv  inflections.grm  kings-gen.txt  kings-nom.txt  mies-cyf.tsv  mies-lac.tsv  ministerstwa-ms.tsv  names.grm  numbers.grm  (+37 more)
